--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
 
     <div id="login-area" class=" container ">
         <h1 class="text-center">Welcome to Shopnil Bank</h1>
@@ -29,16 +29,99 @@
         </div>
     </div>
 
+    <div class="container" id="transactionArea">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="deposit status">
+                    <h5>Deposit</h5>
+                    <h2>$ <span id="currentDeposit">00</span></h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="withdraw status">
+                    <h5>Withdraw</h5>
+                    <h2>$ <span id="withdraw">00</span></h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="balance status">
+                    <h5>Balance</h5>
+                    <h2>$ <span id="balance">00</span></h2>
+                </div>
+            </div>
+        </div>
 
 
-<script>
-    const loginBtn = document.getElementById("login");
-    loginBtn.addEventListener('click', function(){
-        const loginArea = document.getElementById("login-area");
-        loginArea.style.display = "none";
-    })
+        <div class="row">
+            <div class="col-md-6 ">
+                <div class="deposit-fund transaction-history">
+                    <h3>Deposit</h3>
+                    <br>
+                    <input id="depositAmount" placeholder="$ amount you want to deposit" type="text" class="form-control">
+                    <br>
+                    <button id="addDeposit" class="btn btn-success">Deposit</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="deposit-fund transaction-history">
+                    <h3>Withdraw</h3>
+                    <br>
+                    <input id="withdraw-input" placeholder="$ amount you want to withdraw" type="text" class="form-control">
+                    <br>
+                    <button id="withdraw-Amount" class="btn btn-success">Withdraw</button>
+                </div>
+            </div>
+        </div>
 
-</script>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <script>
+        //login button event handler
+        const loginBtn = document.getElementById("login");
+        loginBtn.addEventListener('click', function () {
+            const loginArea = document.getElementById("login-area");
+            loginArea.style.display = "none";
+            const transactionArea = document.getElementById("transactionArea");
+            transactionArea.style.display = "block";
+        })
+
+
+        //deposit button event handler
+
+        const deposit = document.getElementById("addDeposit");
+        deposit.addEventListener('click', function(){
+            const depositAmount = document.getElementById("depositAmount").value;
+            const depositNumber = parseFloat(depositAmount);
+
+            const currentDeposit = document.getElementById("currentDeposit").innerText;
+            const currentDepositNumber = parseFloat(currentDeposit);
+            const totalDeposit = depositNumber + currentDepositNumber;
+            
+            document.getElementById("currentDeposit").innerText = totalDeposit;
+            document.getElementById("depositAmount").value = "";
+
+                //Balance
+            const currentBalance = document.getElementById("balance").innerText;
+            const currentBalanceNumber = parseFloat(currentBalance);
+            const totalBalance = currentBalanceNumber + depositNumber;
+            document.getElementById("balance").innerText = totalBalance;
+   
+
+        }) 
+
+        //withdraw
+        const withdrawAmount = document.get
+
+    </script>
 
 
 
