--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-4">
                 <div class="balance status">
                     <h5>Balance</h5>
-                    <h2>$ <span id="balance">00</span></h2>
+                    <h2>$ <span id="balance">150</span></h2>
                 </div>
             </div>
         </div>
@@ -57,7 +57,8 @@
                 <div class="deposit-fund transaction-history">
                     <h3>Deposit</h3>
                     <br>
-                    <input id="depositAmount" placeholder="$ amount you want to deposit" type="text" class="form-control">
+                    <input id="depositAmount" placeholder="$ amount you want to deposit" type="text"
+                        class="form-control">
                     <br>
                     <button id="addDeposit" class="btn btn-success">Deposit</button>
                 </div>
@@ -66,7 +67,8 @@
                 <div class="deposit-fund transaction-history">
                     <h3>Withdraw</h3>
                     <br>
-                    <input id="withdraw-input" placeholder="$ amount you want to withdraw" type="text" class="form-control">
+                    <input id="withdraw-input" placeholder="$ amount you want to withdraw" type="text"
+                        class="form-control">
                     <br>
                     <button id="withdraw-Amount" class="btn btn-success">Withdraw</button>
                 </div>
@@ -85,6 +87,22 @@
 
 
     <script>
+
+        // Functions:
+
+        function getInputNumber(id) {
+            const amount = document.getElementById(id).value;
+            amountNumber = parseFloat(amount);
+            return amountNumber;
+        }
+
+        function addDepositStatus(id, depositNumber) {
+            const balance = document.getElementById(id).innerText;
+            const balanceNumber = parseFloat(balance);
+            const total = balanceNumber + depositNumber;
+            document.getElementById(id).innerText = total;
+        }
+
         //login button event handler
         const loginBtn = document.getElementById("login");
         loginBtn.addEventListener('click', function () {
@@ -98,28 +116,33 @@
         //deposit button event handler
 
         const deposit = document.getElementById("addDeposit");
-        deposit.addEventListener('click', function(){
-            const depositAmount = document.getElementById("depositAmount").value;
-            const depositNumber = parseFloat(depositAmount);
+        deposit.addEventListener('click', function () {
+            const depositNumber = getInputNumber("depositAmount");
 
-            const currentDeposit = document.getElementById("currentDeposit").innerText;
-            const currentDepositNumber = parseFloat(currentDeposit);
-            const totalDeposit = depositNumber + currentDepositNumber;
-            
-            document.getElementById("currentDeposit").innerText = totalDeposit;
-            document.getElementById("depositAmount").value = "";
+            // const currentDeposit = document.getElementById("currentDeposit").innerText;
+            // const currentDepositNumber = parseFloat(currentDeposit);
+            // const totalDeposit = depositNumber + currentDepositNumber;
 
-                //Balance
-            const currentBalance = document.getElementById("balance").innerText;
-            const currentBalanceNumber = parseFloat(currentBalance);
-            const totalBalance = currentBalanceNumber + depositNumber;
-            document.getElementById("balance").innerText = totalBalance;
-   
+            // document.getElementById("currentDeposit").innerText = totalDeposit;
+            // document.getElementById("depositAmount").value = "";
 
-        }) 
+
+            //Balance
+            addDepositStatus("currentDeposit", depositNumber);
+            addDepositStatus("balance", depositNumber);
+
+
+        })
+
 
         //withdraw
-        const withdrawAmount = document.get
+        const withdrawAmount = document.getElementById("withdraw-Amount");
+        withdrawAmount.addEventListener('click', function () {
+
+            const withdrawNumber = getInputNumber("withdraw-input");
+            console.log(withdrawNumber);
+
+        })
 
     </script>
 
